--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ h1 img{
     display: flex;
 }
 
-form{
+.formulario{
     width: 80%;
     padding: 20px;
 }
@@ -86,6 +86,7 @@ legend{
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 
 .columna h2{
